JEAP-6536 Replace get(0) with getFirst()